--- a/team-all.html
+++ b/team-all.html
@@ -57,17 +57,17 @@
         </div>
         <nav class="country">
             <ul>
-                <a href="team-all.html" class="selected">All</a>
-                <a href="team-argentina.html">Argentina</a>
-                <a href="team-chile.html">Chile</a>
-                <a href="team-colombia.html">Colombia</a>
-                <a href="team-mexico.html">México</a>
+                <a href="team-all.html" class="switch-all selected">All</a>
+                <a href="team-argentina.html" class="switch-argentina">Argentina</a>
+                <a href="team-chile.html" class="switch-chile">Chile</a>
+                <a href="team-colombia.html" class="switch-colombia">Colombia</a>
+                <a href="team-mexico.html" class="switch-mexico">México</a>
             </ul>
         </nav>
         <div class="full-portfolio">
             <ul class="content-sliders items">
                 <!--        MEXICO -->
-                <li class="item overlay">
+                <li class="item overlay mexico">
                     <a href="hector-sepulveda.html" target="_blank" data-contenturl="portfolio-post3.html" data-callback="callPortfolioScripts();"><img src="style/images/art/hector.jpg" alt="" />
                         <div class="mask">
                             <h5>Héctor Sepúlveda</h5>
@@ -76,7 +76,7 @@
                     </a>
                 </li>
 
-                <li class="item overlay">
+                <li class="item overlay mexico">
                     <a href="pablo-rivero.html" target="_blank" data-contenturl="portfolio-post4.html" data-callback="callPortfolioScripts();"><img src="style/images/art/pablo.jpg" alt="" />
                         <div class="mask">
                             <h5>Pablo Rivero</h5>
@@ -85,7 +85,7 @@
                     </a>
                 </li>
 
-                <li class="item overlay">
+                <li class="item overlay mexico">
                     <a href="aleka-quintana.html" target="_blank" data-contenturl="portfolio-post2.html" data-callback="callPortfolioScripts();"><img src="style/images/art/aleka.jpg" alt="">
                         <div class="mask">
                             <h5>Aleka Quintana</h5>
@@ -94,7 +94,7 @@
                     </a>
                 </li>
 
-                <li class="item overlay">
+                <li class="item overlay mexico">
                     <a href="raul-villarreal.html" target="_blank" data-contenturl="portfolio-post5.html" data-callback="callPortfolioScripts();"><img src="style/images/art/raul.jpg" alt="" />
                         <div class="mask">
                             <h5>Raúl Villarreal</h5>
@@ -103,7 +103,7 @@
                     </a>
                 </li>
 
-                <li class="item overlay">
+                <li class="item overlay mexico">
                     <a href="gerardo-ampudia.html" target="_blank" data-contenturl="portfolio-post6.html" data-callback="callPortfolioScripts();"><img src="style/images/art/gerardo.jpg" alt="" />
                         <div class="mask">
                             <h5>Gerardo Ampudia</h5>
@@ -112,7 +112,7 @@
                     </a>
                 </li>
 
-                <li class="item overlay">
+                <li class="item overlay mexico">
                     <a href="fernanda-melendez.html" target="_blank" data-contenturl="portfolio-post2.html" data-callback="callPortfolioScripts();"><img src="style/images/art/fer.jpg" alt="" />
                         <div class="mask">
                             <h5>Fernanda Meléndez</h5>
@@ -121,7 +121,7 @@
                     </a>
                 </li>
 
-                <li class="item overlay">
+                <li class="item overlay mexico">
                     <a href="ivan-carrillo.html" target="_blank" data-contenturl="portfolio-post3.html" data-callback="callPortfolioScripts();"><img src="style/images/art/ivan.jpg" alt="" />
                         <div class="mask">
                             <h5>Iván Carrillo</h5>
@@ -130,7 +130,7 @@
                     </a>
                 </li>
 
-                <li class="item overlay">
+                <li class="item overlay mexico">
                     <a href="paulina-llamas.html" target="_blank" data-contenturl="portfolio-post.html" data-callback="callPortfolioScripts();"><img src="style/images/art/paulina.jpg" alt="" />
                         <div class="mask">
                             <h5>Paulina Llamas</h5>
@@ -139,7 +139,7 @@
                     </a>
                 </li>
 
-                <li class="item overlay">
+                <li class="item overlay mexico">
                     <a href="edgar-villalba.html" target="_blank" data-contenturl="portfolio-post4.html" data-callback="callPortfolioScripts();"><img src="style/images/art/edgar.jpg" alt="" />
                         <div class="mask">
                             <h5>Edgar Villalba</h5>
@@ -149,7 +149,7 @@
                 </li>
 
                 <!--       COLOMBIA -->
-                <li class="item overlay">
+                <li class="item overlay colombia">
                     <a href="daniela-calleja.html" target="_blank" data-contenturl="portfolio-post4.html" data-callback="callPortfolioScripts();"><img src="style/images/art/daniela.jpg" alt="" />
                         <div class="mask">
                             <h5>Daniela Calleja</h5>
@@ -158,7 +158,7 @@
                     </a>
                 </li>
 
-                  <li class="item overlay">
+                  <li class="item overlay colombia">
                     <a href="patricia-saenz.html" target="_blank" data-contenturl="portfolio-post4.html" data-callback="callPortfolioScripts();"><img src="style/images/art/patricia.jpg" alt="" />
                         <div class="mask">
                             <h5>Patricia Saenz</h5>
@@ -167,8 +167,8 @@
                     </a>
                 </li>
 
-                 <li class="item overlay">
-                    <a href="natalia-cobo.html" target="_blank" data-contenturl="portfolio-post4.html" data-callback="callPortfolioScripts();"><img src="http://placehold.it/440x330" alt="" />
+                 <li class="item overlay colombia">
+                    <a href="natalia-cobo.html" target="_blank" data-contenturl="portfolio-post4.html" data-callback="callPortfolioScripts();"><img src="style/images/art/placeholder-she.jpg" alt="" />
                         <div class="mask">
                             <h5>Natalia Cobo</h5>
                             <span class="tagline">Compliance & Legal Manager</span>
@@ -178,8 +178,8 @@
 
              <!--    CHILE -->
 
-              <li class="item overlay">
-                    <a href="felipe-henriquez.html" target="_blank" data-contenturl="portfolio-post4.html" data-callback="callPortfolioScripts();"><img src="http://placehold.it/440x330" alt="" />
+              <li class="item overlay chile">
+                    <a href="felipe-henriquez.html" target="_blank" data-contenturl="portfolio-post4.html" data-callback="callPortfolioScripts();"><img src="style/images/art/placeholder-he.jpg" alt="" />
                         <div class="mask">
                             <h5>Felipe Henríquez</h5>
                             <span class="tagline">Managing Partner</span>
@@ -187,8 +187,8 @@
                     </a>
                 </li>
 
-                 <li class="item overlay">
-                    <a href="alan-farcas.html" target="_blank" data-contenturl="portfolio-post4.html" data-callback="callPortfolioScripts();"><img src="http://placehold.it/440x330" alt="" />
+                 <li class="item overlay chile">
+                    <a href="alan-farcas.html" target="_blank" data-contenturl="portfolio-post4.html" data-callback="callPortfolioScripts();"><img src="style/images/art/placeholder-he.jpg" alt="" />
                         <div class="mask">
                             <h5>Alan Farcas</h5>
                             <span class="tagline">Managing Partner</span>
@@ -196,8 +196,8 @@
                     </a>
                 </li>
 
-                   <li class="item overlay">
-                    <a href="nicolas-casado.html" target="_blank" data-contenturl="portfolio-post4.html" data-callback="callPortfolioScripts();"><img src="http://placehold.it/440x330" alt="" />
+                   <li class="item overlay chile">
+                    <a href="nicolas-casado.html" target="_blank" data-contenturl="portfolio-post4.html" data-callback="callPortfolioScripts();"><img src="style/images/art/placeholder-he.jpg" alt="" />
                         <div class="mask">
                             <h5>Nicolás Casado</h5>
                             <span class="tagline">Legal Controller</span>
@@ -205,8 +205,8 @@
                     </a>
                 </li>
 
-                   <li class="item overlay">
-                    <a href="hilsa-oliveros.html" target="_blank" data-contenturl="portfolio-post4.html" data-callback="callPortfolioScripts();"><img src="http://placehold.it/440x330" alt="" />
+                   <li class="item overlay chile">
+                    <a href="hilsa-oliveros.html" target="_blank" data-contenturl="portfolio-post4.html" data-callback="callPortfolioScripts();"><img src="style/images/art/placeholder-she.jpg" alt="" />
                         <div class="mask">
                             <h5>Hilsa Oliveros</h5>
                             <span class="tagline">Accounting Controller</span>
@@ -216,8 +216,8 @@
 
              <!--    ARGENTINA -->
 
-                <li class="item overlay">
-                    <a href="eduardo-amadeo.html" target="_blank" data-contenturl="portfolio-post4.html" data-callback="callPortfolioScripts();"><img src="http://placehold.it/440x330" alt="" />
+                <li class="item overlay argentina">
+                    <a href="eduardo-amadeo.html" target="_blank" data-contenturl="portfolio-post4.html" data-callback="callPortfolioScripts();"><img src="style/images/art/placeholder-he.jpg" alt="" />
                         <div class="mask">
                             <h5>Eduardo Amadeo</h5>
                             <span class="tagline">Managing Partner</span>
@@ -225,17 +225,14 @@
                     </a>
                 </li>
 
-                   <li class="item overlay">
-                    <a href="alex-brill.html" target="_blank" data-contenturl="portfolio-post4.html" data-callback="callPortfolioScripts();"><img src="http://placehold.it/440x330" alt="" />
+                   <li class="item overlay argentina">
+                    <a href="alex-brill.html" target="_blank" data-contenturl="portfolio-post4.html" data-callback="callPortfolioScripts();"><img src="style/images/art/placeholder-he.jpg" alt="" />
                         <div class="mask">
                             <h5>Alex Brill</h5>
                             <span class="tagline">Business Analyst</span>
                         </div>
                     </a>
                 </li>
-
-
-
 
 
             </ul>
@@ -265,6 +262,7 @@
         <script src="style/js/jquery.fitvids.js"></script>
         <script src="style/js/view.min.js?auto"></script>
         <script src="style/js/scripts.js"></script>
+        <script src="style/js/country-switch.js"></script>
 </body>
 
 </html>
