portfolio por pais

--- a/contact-nazca.html
+++ b/contact-nazca.html
@@ -33,30 +33,26 @@
           <a class="brand" href="index.html"><img src="style/images/logo.png" alt="" />
           </a>
           <div class="nav-collapse pull-right collapse">
-            <ul class="nav">
-              <li><a href="index.html">Home</a>
-              </li>
-              <li><a href="portfolio-nazca.html">Portfolio</a>
-              </li>
-              <li class="dropdown">
-                  <a href="team-nazca.html" class="dropdown-toggle js-activated">Team</a>
-                  <ul class="dropdown-menu">
-                    <li><a href="team-nazca.html#slide1">Argentina</a>
-                    </li>
-                    <li><a href="team-nazca.html#slide2">Brazil</a>
-                    </li>
-                    <li><a href="team-nazca.html#slide3">Chile</a>
-                    </li>
-                    <li><a href="team-nazca.html#slide4">Colombia</a>
-                    </li>
-                    <li><a href="team-nazca.html#slide5">México</a>
-                    </li>
-                  </ul>
-                </li>
-                <li><a href="contact-nazca.html">Contact</a>
-                </li>
-            </ul>
-          </div>
+                        <ul class="nav">
+                            <li>
+                                <a href="portfolio-nazca.html">
+                                    Portfolio
+                                </a>
+                            </li>
+                            <li>
+                                <a href="team-all.html" >
+                                    Team
+                                </a>
+                            </li>
+                            <li>
+                                <a href="contact-nazca.html">
+                                    Contact
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
         
         </div>
   
@@ -116,76 +112,28 @@
 
     </div>
 
-    <footer class="black-wrapper">
-      <div class="container inner">
-        <div class="row">
-          <div class="partner-logos">
-            <img class="single-logo" src="style/images/logo-footer/endeavor.png" />
-            <img class="single-logo" src="style/images/logo-footer/impulsa.png" />
-            <img class="single-logo" src="style/images/logo-footer/laca.png" />
-            <img class="single-logo" src="style/images/logo-footer/inadem.png" />
-            <img class="single-logo" src="style/images/logo-footer/global-angels.png" />
-            <img class="single-logo" src="style/images/logo-footer/corfo.png" />
-            <img class="single-logo" src="style/images/logo-footer/amexcap.png" />
-          </div>
-        </div>
-
-
-        <div class="nazca-global">
-          <section class="span4 widget">
-            <h6 class="section-title widget-title">Nazca Ventures Chile</h6>
-            <div class="office-adress">Av Vitacura 2771, Of 405
-              <br>Las Condes, Santiago </br> management@nazca.vc</div>
-          </section>
-
-
-          <section class="span4 widget">
-            <h6 class="section-title widget-title">Nazca Ventures México</h6>
-            <div class="office-adress">Campeche 233 Col.Condesa
-              <br>México DF, 06170</br>management@nazca.vc</div>
-          </section>
-
-
-          <section class="span4 widget">
-            <h6 class="section-title widget-title">Nazca Ventures Argentina</h6>
-            <div class="office-adress">Manuel Obarrio 2986, Piso 1
-              <br>Buenos Aires, C1429BZJ</br>management@nazca.vc</div>
-          </section>
-
-          <section class="span4 widget">
-            <h6 class="section-title widget-title">Nazca Ventures Colombia</h6>
-            <div class="office-adress">Cra 18 Nº 93-90
-              <br>Bogotá, Colombia</br>management@nazca.vc</div>
-          </section>
-
-          <section class="span4 widget">
-            <h6 class="section-title widget-title">Nazca Ventures Brazil</h6>
-            <div class="office-adress">Rua Doutor Celso Dario Guimarães 66, Morumbi</br>São Paulo SP, Brasil</br>
-              management@nazca.vc</div>
-          </section>
-        </div>
-        <hr/>
-        <p class="legal">© 2015 Nazca Global</p>
-      </div>
-  </div>
-
-  </footer>
-
-  </div>
-
-  <script src="style/js/jquery.js"></script>
-  <script src="style/js/bootstrap.min.js"></script>
-  <script src="style/js/twitter-bootstrap-hover-dropdown.min.js"></script>
-  <script src="style/js/jquery.themepunch.plugins.min.js"></script>
-  <script src="style/js/jquery.themepunch.revolution.min.js"></script>
-  <script src="style/js/jquery.themepunch.showbizpro.min.js"></script>
-  <script src="style/js/jquery.isotope.min.js"></script>
-  <script src="style/js/jquery.hoverdir.min.js"></script>
-  <script src="style/js/jquery.slickforms.js"></script>
-  <script src="style/js/jquery.easytabs.min.js"></script>
-  <script src="style/js/jquery.fitvids.js"></script>
-  <script src="style/js/view.min.js?auto"></script>
-  <script src="style/js/scripts.js"></script>
+        <footer>
+          <div id="footer" class="navbar">
+            <div class="footer-background">
+                <div class="legal">
+                    <p>Mountain Nazca 2016</p>
+                </div>
+            </div>
+        </footer>
+    </div>
+    <script src="style/js/jquery.js"></script>
+    <script src="style/js/bootstrap.min.js"></script>
+    <script src="style/js/twitter-bootstrap-hover-dropdown.min.js"></script>
+    <script src="style/js/jquery.themepunch.plugins.min.js"></script>
+    <script src="style/js/jquery.themepunch.revolution.min.js"></script>
+    <script src="style/js/jquery.themepunch.showbizpro.min.js"></script>
+    <script src="style/js/jquery.isotope.min.js"></script>
+    <script src="style/js/jquery.hoverdir.min.js"></script>
+    <script src="style/js/jquery.slickforms.js"></script>
+    <script src="style/js/jquery.easytabs.min.js"></script>
+    <script src="style/js/jquery.fitvids.js"></script>
+    <script src="style/js/view.min.js?auto"></script>
+    <script src="style/js/scripts.js"></script>
 </body>
 
 </html>
