--- a/aleka-quintana.html
+++ b/aleka-quintana.html
@@ -72,7 +72,7 @@
             <div class="profile-info">
                 <h2 class="profile-name">Aleka Quintana</h2>
                 <h5>Corporate Law</h5>
-                <p class="bio">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+                <p class="bio">Aleka is the Corporate Lawyer at Mountain Nazca, prior to MP, she used to work in a big corporative law firm. Then, became a human rights lawyer for about three years, time in which she had the opportunity to work as a volunteer in Africa. Now she´s glad to be part of the entrepreneur world combining helping people create new ideas and her expertise in corporative law.</p>
 
                 <div class="social-icons">
                     <a class="linkedin"><a href="https://mx.linkedin.com/in/alejandra-quintana-64a247ba" target="_blank"><img src="style/images/art/btn-linkedin.png"></a>
